* Unreleased - Christophe Dumez <chris@qbittorrent.org> - v2.9.1
    - I18N: Update Russian translation

* Sat Oct 08 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.9.0
    - FEATURE: Add file association settings to program preferences (Windows)
    - FEATURE: Add setting to ignore slow torrents in queueing system
    - FEATURE: Add advanced setting to announce to all trackers
    - FEATURE: Add support for anonymous mode (libtorrent >= v0.16)
    - FEATURE: Add quick "set as default save path" checkbox to torrent addition dialog (sledgehammer999)
    - BUGFIX: Add tray menu entry for toggling window visibility
    - BUGFIX: Fix execution log lines selection and copying
    - BUGFIX: Reduce CPU usage when running Web UI
    - BUGFIX: Save RSS items to disk regularly for safety
    - BUGFIX: Fix ratio calculation (use all_time_download)
    - BUGFIX: Fix torrent upload issues (Web UI)
    - BUGFIX: Fix some IE incompatibilities (Web UI)
    - COSMETIC: Display speed at the beginning of the Window title
    - COSMETIC: Several cosmetic fixes to the Web UI
    - COSMETIC: Make top toolbar follow system style
    - OTHER: Display libraries versions in about dialog (sledgehammer999)
    - OTHER: Display qBittorrent version in Web UI about dialog

* Thu Jun 02 2011 - Christophe Dumez <chris@qbittorrent.org> - v2.8.0
    - FEATURE: Added full libtorrent v0.16 support (uTP, ...)
    - FEATURE: Proxy can be disabled for peer connections
    - FEATURE: Added support for secure SMTP connection (SSL)
    - FEATURE: Added support for SMTP authentication
    - FEATURE: Added UPnP/NAT-PMP port forward for the Web UI port
    - FEATURE: qBittorrent can update dynamic DNS services (DynDNS, no-ip)
    - FEATURE: Display peer connection type in peer list (BT, uTP, Web)
    - FEATURE: Added full regex support to RSS downloader
    - FEATURE: Added regex help and validation in RSS downloader
    - FEATURE: Added HTTPS support to Web UI (Ishan Arora)